# sinalizacao_hospitalar

./: CMakeLists.txt  README.md  font.h  revisao.c  sinalizacao_hospitalar.c  ssd1306.c
